--- a/egypt.html
+++ b/egypt.html
@@ -97,7 +97,7 @@
                     <li><p><i class="fa fa-user"></i>Shiyin Wang Et Al.</p></li>
                     <li><p><i class="fa fa-globe"></i><a href="http://news.tsinghua.edu.cn/publish/thunews/11494/2018/20180402165204060824705/20180402165204060824705_.html" target="_blank">News</a></p></li>
                     <li><p><i class="fa fa-file-text-o"></i> Presentation "The Factors that Caused the Islamization of Egypt"<a href="field/egypt/report.pdf" target="_blank">Report</a> <a href="field/egypt/PPT.pdf" target="_blank">PPT</a> </p></li>
-                    <li<p><i class="fa fa-camera"></i><a href="field/egypt/video.mov">Video</a></p></li>
+                    <li><p><i class="fa fa-camera"></i><a href="field/egypt/video.mov">Video</a></p></li>
                     <li><p><i class="fa fa-calendar"></i>2018 Jan ~ 2018 Feb</p></li>
                 </ul>
 
