--- a/index.html
+++ b/index.html
@@ -386,6 +386,17 @@
                     <!-- Portfolio Grid -->
                     <div id="portfolio_grid" class="portfolio-grid portfolio-masonry masonry-grid-3">
 
+                      <figure class="item" data-groups='["all", "research"]'>
+                        <a class="ajax-page-load" href="stanford.html">
+                          <img src="research/stanford/cover.png" alt="">
+                          <div>
+                            <h5 class="name">Can Higher-Level Molecular Networks Explain Biology?  A User’s Perspective</h5>
+                            <small>Stanford Helix</small>
+                            <i class="fa fa-file-text-o"></i>
+                          </div>
+                        </a>
+                      </figure>
+
                       <!-- Portfolio Item 1 -->
                       <figure class="item" data-groups='["all", "research"]'>
                         <a class="ajax-page-load" href="mit.html">
@@ -421,16 +432,7 @@
                         <!--</a>-->
                       <!--</figure>-->
 
-                      <figure class="item" data-groups='["all", "research"]'>
-                        <a class="ajax-page-load" href="stanford.html">
-                          <img src="research/stanford/cover.png" alt="">
-                          <div>
-                            <h5 class="name">Can Higher-Level Molecular Networks Explain Biology?  A User’s Perspective</h5>
-                            <small>Stanford Helix</small>
-                            <i class="fa fa-file-text-o"></i>
-                          </div>
-                        </a>
-                      </figure>
+
                       <!-- /Portfolio Item 2 -->
 
 
@@ -502,6 +504,17 @@
                         </a>
                       </figure>
 
+                      <figure class="item" data-groups='["all", "research", "product"]'>
+                        <a class="ajax-page-load" href="hackathon.html">
+                          <img src="others/hackathon/cover.png" alt="">
+                          <div>
+                            <h5 class="name">A Proposal to Improve Emergency Room Efficiency, Effectiveness, and Accessibility</h5>
+                            <small>2019 MIT Policy Hackathon</small>
+                            <i class="fa fa-file-text-o"></i>
+                          </div>
+                        </a>
+                      </figure>
+
                       <figure class="item" data-groups='["all", "field"]'>
                         <a class="ajax-page-load" href="guizhou.html">
                           <img src="field/guizhou/cover.jpeg" alt="">
@@ -542,6 +555,28 @@
                           <div>
                             <h5 class="name">Global Competence Fellowship</h5>
                             <small>My Senior Fellowship at Tsinghua</small>
+                            <i class="fa fa-file-text-o"></i>
+                          </div>
+                        </a>
+                      </figure>
+
+                      <figure class="item" data-groups='["all", "field"]'>
+                        <a class="ajax-page-load" href="turtle.html">
+                          <img src="field/turtle/cover.jpeg" alt="">
+                          <div>
+                            <h5 class="name">Sri Lanka: Sea Turtle Protection</h5>
+                            <small>2017 Summer Volunteer Experience</small>
+                            <i class="fa fa-file-text-o"></i>
+                          </div>
+                        </a>
+                      </figure>
+
+                      <figure class="item" data-groups='["all", "others"]'>
+                        <a class="ajax-page-load" href="paintings.html">
+                          <img src="others/paintings/cover.jpeg" alt="">
+                          <div>
+                            <h5 class="name">Something Art</h5>
+                            <small>Amateur</small>
                             <i class="fa fa-file-text-o"></i>
                           </div>
                         </a>
@@ -965,9 +1000,9 @@
       </div>
       <!-- /Main Content -->
     </div>
-    <footer>
-      <div class="copyrights">Material template by LMPixels</div>
-    </footer>
+    <!--<footer>-->
+      <!--<div class="copyrights">Material template by LMPixels</div>-->
+    <!--</footer>-->
 
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/pages-switcher.js"></script>
