Add SDG Open Hackathon

--- a/ai.html
+++ b/ai.html
@@ -58,7 +58,7 @@
                     <li><p><i class="fa fa-globe"></i> <a href="https://github.com/shiyinw/cs221_driverless_car" target="_blank">https://github.com/shiyinw/cs221_driverless_car</a></p></li>
                     <li><p><i class="fa fa-globe"></i> <a href="https://github.com/shiyinw/Pac-Man" target="_blank">https://github.com/shiyinw/Pac-Man</a></p></li>
                     <li><p><i class="fa fa-globe"></i> <a href="https://github.com/shiyinw/CS231n" target="_blank">https://github.com/shiyinw/CS231n</a></p></li>
-                    <li><p><i class="fa fa-calendar"></i>2018 Sep ~ 2019 Dec</p></li>
+                    <li><p><i class="fa fa-calendar"></i>Sep 2018 ~ Dec 2019</p></li>
                 </ul>
 
                 <p class="text-justify">Built from the numpy scratch, I have acquired a deep understanding of the neural network algorithms. Then I developed reinforcement learning algorithms to play PacMan games and navigate driverless cars.</p>
