--- a/color.html
+++ b/color.html
@@ -61,7 +61,7 @@
                     <li><p><i class="fa fa-user"></i>Shiyin Wang</p></li>
                     <li><p><i class="fa fa-globe"></i> <a href="https://github.com/shiyinw/color_by_optim" target="_blank">https://github.com/shiyinw/color_by_optim</a></p></li>
                     <li><p><i class="fa fa-file-text-o"></i><a href="projects/color/report.pdf" target="_blank">Report</a></p></li>
-                    <li><p><i class="fa fa-calendar"></i>2018 Nov</p></li>
+                    <li><p><i class="fa fa-calendar"></i>Nov 2018</p></li>
                 </ul>
 
                 <p class="text-justify">Image & Video Colorization using the algorithm in "Colorization Using Optimization"</p>
