--- a/csapp.html
+++ b/csapp.html
@@ -60,7 +60,7 @@
                 <ul class="project-general-info">
                     <li><p><i class="fa fa-user"></i>Shiyin Wang</p></li>
                     <li><p><i class="fa fa-globe"></i> <a href="https://github.com/shiyinw/CSAPP" target="_blank">https://github.com/shiyinw/CSAPP</a></p></li>
-                    <li><p><i class="fa fa-calendar"></i>2018 Sep ~ 2019 Dec</p></li>
+                    <li><p><i class="fa fa-calendar"></i>Sep 2018 ~ Dec 2019</p></li>
                 </ul>
 
                 <p class="text-justify">BufLab, CacheLab, MollacLab, PerfLab, ProxyLab, and Y86.</p>
