--- a/database.html
+++ b/database.html
@@ -21,7 +21,6 @@
                         <video id="media" controls> 
                               <source src="projects/database/demo.mp4">
                         </video>
-                        <!--<iframe class="embed-responsive-item" src="images/portfolio/demo.mov"></iframe>-->
                     </div>
                     <div class="item">
                         <img src="projects/database/1.png" alt="" />
@@ -71,7 +70,7 @@
                 <ul class="project-general-info">
                     <li><p><i class="fa fa-user"></i>Shiyin Wang</p></li>
                     <li><p><i class="fa fa-globe"></i> <a href="https://github.com/shiyinw/restaurant_ordering_system" target="_blank">https://github.com/shiyinw/restaurant_ordering_system</a></p></li>
-                    <li><p><i class="fa fa-calendar"></i>2018 Nov ~ 2019 Dec</p></li>
+                    <li><p><i class="fa fa-calendar"></i>Nov 2018 ~ Dec 2019</p></li>
                 </ul>
 
                 <p class="text-justify">This is a solo course project in <i>Principal and Application of Database</i> in Tsinghua University during my junior year. This application provides individual interface for customers, cooks, waiters, and admins. I used Python Flask framework, Oracle backend, and Bootstrap frontend.</p>
