--- a/gcf.html
+++ b/gcf.html
@@ -67,7 +67,7 @@
                 </div>
                 <ul class="project-general-info">
                     <li><p><i class="fa fa-user"></i>Shiyin Wang Et Al.</p></li>
-                    <li><p><i class="fa fa-calendar"></i> 2019 Oct ~ 2020 Jun</p></li>
+                    <li><p><i class="fa fa-calendar"></i>Oct 2019 ~ Jun 2020</p></li>
                 </ul>
 
                 <p class="text-justify">Excited to be selected as a "Global Competence Fellow" in my senior year. It is a very selective first-tier fellowship program in Tsinghua, which aims to encourage students interested in global issues to have more understanding in the international operations.</p>
