--- a/guizhou.html
+++ b/guizhou.html
@@ -81,7 +81,7 @@
                         <a href="https://mp.weixin.qq.com/s/-9XYa5rYmi3DlWZKwBHG9A" target="_blank">7</a></p>
                     </li>
                     <li><p><i class="fa fa-file-text-o"></i><a href="field/guizhou/guizhou_bigdata.pdf" target="_blank">Report</a></p></li>
-                    <li><p><i class="fa fa-calendar"></i>2018 Feb</p></li>
+                    <li><p><i class="fa fa-calendar"></i>Feb 2018</p></li>
                 </ul>
 
                 <p class="text-justify">Guizhou is a landlocked province in Southwest China. It is considered a relatively poor and economically undeveloped province, with the third-lowest GDP per capita in China, ahead of Gansu neighboring Yunnan. However, it is also one of China's fastest-growing economies since 2016. The Chinese government is looking to develop Guizhou as a data hub because of the excellent climate conditions for building data centers(e.g., Apple iCloud, Tencent, Alibaba).</p>
