--- a/hackathon.html
+++ b/hackathon.html
@@ -17,8 +17,10 @@
         <div class="row">
             <div class="col-sm-7 col-md-7 portfolio-block">
                 <div class="owl-carousel portfolio-page-carousel">
-                    <div class="item">
-                        <img src="others/hackathon/6.mp4" alt="" />
+                    <div class="portfolio-page-video embed-responsive embed-responsive-16by9">
+                        <video id="media" controls> 
+                              <source src="others/hackathon/6.mp4">
+                        </video>
                     </div>
                     <div class="item">
                         <img src="others/hackathon/1.png" alt="" />
@@ -74,7 +76,7 @@
                     <li><p><i class="fa fa-globe"></i><a href="https://news.mit.edu/2019/mit-policy-hackathon-connects-data-driven-problem-solvers-0521" target="_blank">MIT News</a></p></li>
                     <li><p><i class="fa fa-file-text-o"></i>Our Solution <a href="others/hackathon/(ER-Flash)A Proposal to Improve ER Efficiency, Effectiveness, and Accessibility.pdf" target="_blank">Report</a> <a href="others/hackathon/ER-Flash.pdf" target="_blank">PPT</a> </p></li>
                     <!--<li><p><i class="fa fa-camera"></i><a href="others/hackathon/">Video</a></p></li>-->
-                    <li><p><i class="fa fa-calendar"></i>2019 Apr</p></li>
+                    <li><p><i class="fa fa-calendar"></i>Apr 2019</p></li>
                 </ul>
 
                 <p class="text-justify">I participated in the Policy Hackathon organized by IDSS. Prior to the hackathon, I posted group advertisements for team members on Facebook, and eventually formed a diverse group (called “ER-Flash”) composed of four people with specialties in consulting, politics, government, and data science. As the data science expert, I was responsible for data analysis, data visualization, modeling, and report formatting with Latex. In an intense 24 hours, we made a proposal to improve emergency rooms’ efficiency, effectiveness, and accessibility by recommending: 1) reducing the number of patients visiting the ER by primary care providers, 2) financial incentives, 3) strategic queuing, and 4) staffing interventions. I provided evidence for our suggestions through exploratory data analysis and queuing models.</p>
