--- a/index.html
+++ b/index.html
@@ -135,9 +135,9 @@
                         <div class="block-title">
                           <h3>About <span>Me</span></h3>
                         </div>
-                        <p>HELLO WORLD!! I am thrilled that you are here, visiting my website. I am currently studying Computer Science and Statistics(minor) at Tsinghua University from 2016 to 2020. I was awarded Global Competence Fellowship for my senior year.</p>
-                        <p>During my first three years of my undergraduate life, I am lucky to have three research experience in Central America(UIUC), the East Coast(MIT), and the West Coast(Stanford), where I worked on Text Mining, Privacy-Preserving Machine Learning, and Biomedical Informatics. Broadening the horizon of human intelligence and technology development is an honorable mission in my mind. I hope I can explore a challenging new field in the following years.</p>
-                        <p>I got several chances to have a look into a wide range of developing countries. I went to Sri Lanka as a sea turtle protection volunteer and studied two weeks at AUC in Egypt about Egyptology, Cairo Urban Development, Middle East Conflicts, etc. Besides, I have also been to Nepal, Singapore, and Turkey. The most unbelievable experience is participating in the BRICS Youth Forum, one of the highest level of official youth diplomacy, as a delegate.</p>
+                        <p>HELLO WORLD!! I am thrilled that you are here, visiting my website. I am currently studying Computer Science and Statistics(minor) at Tsinghua University from 2016 to 2020. I was awarded the Global Competence Fellowship for my senior year.</p>
+                        <p>During my first three years of my undergraduate life, I am lucky to have three research experiences in Central America(UIUC), the East Coast(MIT), and the West Coast(Stanford), where I worked on Text Mining, Privacy-Preserving Machine Learning, and Biomedical Informatics. Broadening the horizon of human intelligence and technology development is an honorable mission in my mind. I hope I can explore a challenging new field in the following years.</p>
+                        <p>I got several chances to have a look at a wide range of developing countries. I went to Sri Lanka as a sea turtle protection volunteer and studied two weeks at AUC in Egypt about Egyptology, Cairo Urban Development, Middle East Conflicts, etc. Besides, I have also been to Nepal, Singapore, and Turkey. The most unbelievable experience is participating in the BRICS Youth Forum, a highest-level official youth diplomacy event, as a delegate.</p>
                       </div>
                     </div>
 
@@ -499,6 +499,17 @@
                           <div>
                             <h5 class="name">Computer System Assignments</h5>
                             <small>THU Computer System Course Project</small>
+                            <i class="fa fa-file-text-o"></i>
+                          </div>
+                        </a>
+                      </figure>
+
+                      <figure class="item" data-groups='["all", "product"]'>
+                        <a class="ajax-page-load" href="sdg.html">
+                          <img src="projects/sdg/cover.png" alt="">
+                          <div>
+                            <h5 class="name">Short Video Deep Communication of Poverty Alleviation in China</h5>
+                            <small>Sustainable Development Goals Open Hackathon</small>
                             <i class="fa fa-file-text-o"></i>
                           </div>
                         </a>
