--- a/mcmc.html
+++ b/mcmc.html
@@ -53,7 +53,7 @@
                 <ul class="project-general-info">
                     <li><p><i class="fa fa-user"></i>Shiyin Wang</p></li>
                     <li><p><i class="fa fa-globe"></i> <a href="https://github.com/shiyinw/cipher_breaking_mcmc" target="_blank">https://github.com/shiyinw/cipher_breaking_mcmc</a></p></li>
-                    <li><p><i class="fa fa-calendar"></i> 2019 Apr ~ 2019 May</p></li>
+                    <li><p><i class="fa fa-calendar"></i>Apr 2019 ~ May 2019</p></li>
                 </ul>
 
                 <p class="text-justify">A substitution cipher is a method of encryption by which units of plaintext are encrypted according to a ciphering function.</p>
