--- a/president.html
+++ b/president.html
@@ -55,7 +55,7 @@
                 </div>
                 <ul class="project-general-info">
                     <li><p><i class="fa fa-user"></i>Shiyin Wang</p></li>
-                    <li><p><i class="fa fa-calendar"></i> 2019 Sep ~ 2020 Jul</p></li>
+                    <li><p><i class="fa fa-calendar"></i>Sep 2019 ~ Jul 2020</p></li>
                 </ul>
 
                 <p class="text-justify">I used to be longing for being the class president in my primary school for it was regarded as an honor of leadership and influence. But I never succeed to get the top votes and always ended with a committee member.</p>
