--- a/turtle.html
+++ b/turtle.html
@@ -17,8 +17,11 @@
         <div class="row">
             <div class="col-sm-7 col-md-7 portfolio-block">
                 <div class="owl-carousel portfolio-page-carousel">
-                    <div class="item">
-                        <img src="field/turtle/1.mp4" alt="" />
+
+                    <div class="portfolio-page-video embed-responsive embed-responsive-16by9">
+                        <video id="media" controls> 
+                              <source src="field/turtle/1.mp4">
+                        </video>
                     </div>
                     <div class="item">
                         <img src="field/turtle/2.jpeg" alt="" />
@@ -26,8 +29,10 @@
                     <div class="item">
                         <img src="field/turtle/3.jpeg" alt="" />
                     </div>
-                    <div class="item">
-                        <img src="field/turtle/4.mov" alt="" />
+                    <div class="portfolio-page-video embed-responsive embed-responsive-16by9">
+                        <video id="media" controls> 
+                              <source src="field/turtle/4.mov">
+                        </video>
                     </div>
                     <div class="item">
                         <img src="field/turtle/5.jpeg" alt="" />
@@ -83,7 +88,7 @@
                 </div>
                 <ul class="project-general-info">
                     <li><p><i class="fa fa-user"></i>Shiyin Wang Et Al.</p></li>
-                    <li><p><i class="fa fa-calendar"></i>2017 Apr</p></li>
+                    <li><p><i class="fa fa-calendar"></i>Aug 2017</p></li>
                 </ul>
 
                 <p class="text-justify">Near the coast of Sri Lanka, many local people hunt sea turtle eggs for food. Consequently, local NGOs established a sea turtle protection center to provide a safe incubation environment for little turtles. I volunteered at a sea turtle protection center in Galle, Sri Lanka. I also traveled around the island to capture the colony history of Sri Lanka.</p>
