--- a/uiuc.html
+++ b/uiuc.html
@@ -57,7 +57,7 @@
                     <li><p><i class="fa fa-user"></i>Liyuan Liu, Shi Zhi, Yu Zhang, Shiyin Wang, Qi Li, Chao Zhang and Jiawei Han</p></li>
                     <li><p><i class="fa fa-map"></i>Data Mining Group, University of Illinois at Urbana-Champaign</p></li>
                     <!--<li><p><i class="fa fa-globe"></i> <a href="#" target="_blank">www.project-site.com</a></p></li>-->
-                    <li><p><i class="fa fa-calendar"></i>2019 Jun ~ 2019 Sep</p></li>
+                    <li><p><i class="fa fa-calendar"></i>Jun 2019 ~ Sep 2019</p></li>
                 </ul>
 
                 <p class="text-justify">In this paper, we aim to train a unified Named Entity Recognition (NER) model with annotations from multiple sources. It is challenging even for datasets from the same domain, because annotations from different sources may cover different sets of entity types. Such inconsistency makes it omnipresent to treat them as different tasks, and no existing methods, to the best of our knowledge, construct a single model to extract entities of any type covered by disparate datasets. Here, we refer such task as proto-NER and present complementary learning to train with only partial annotations. For this purpose, we explore not only heuristic but also end-to-end learning approaches. Specifically, we transform original one-hot labels to fuzzy labels while preserving the original information. We further propose the fuzzy conditional random field that takes fuzzy labels as supervision and spontaneously integrates label spaces of different corpora. Extensive experiments demonstrate the efficacy of complementary learning and the superiority of the proposed end-to-end approach.</p>
