--- a/stanford.html
+++ b/stanford.html
@@ -69,7 +69,7 @@
                     <li><p><i class="fa fa-user"></i>Shiyin Wang, Tianyun Liu, and Russ B. Altman</p></li>
                     <li><p><i class="fa fa-map"></i>Helix Group, Stanford University</p></li>
                     <!--<li><p><i class="fa fa-globe"></i> <a href="#" target="_blank">www.project-site.com</a></p></li>-->
-                    <li><p><i class="fa fa-calendar"></i>2019 Jul ~ 2019 Aug</p></li>
+                    <li><p><i class="fa fa-calendar"></i>Jul 2019 ~ Aug 2019</p></li>
                 </ul>
 
                 <p class="text-justify">With the repaid development of big data technologies, biological datasets, such as PubMed, GoTerms, ArrayExpress, Protein Interaction Network and PubTator, are favored by researchers for they preserve high-quality, easy-access and structured data without worry about privacy issue.
