--- a/index.html
+++ b/index.html
@@ -180,29 +180,31 @@
                         <div class="timeline">
                           <!-- Education 1 -->
                           <div class="timeline-item">
-                            <h4 class="item-title">Special Student Program</h4>
+                            <h4 class="item-title">Electrical Engineering and Computer Science - Non-Degree Special Student Program</h4>
                             <span class="item-period">2019</span>
                             <span class="item-small">Massachusetts Institute of Technology, MA, USA</span>
-                            <p class="item-description">5.0/5.0 (48 units)</p>
+                            <p class="item-description">Overall GPA: 5.0/5.0 (48 units)</p>
                             <p><b>Courses:</b> 6.437 Inference and Information, 6.802 Computational Systems Biology, 6.045 Automata Computability and Complexity Theory, 6.100  Independent Research Project</p>
                           </div>
                           <!-- / Education 1 -->
 
                           <!-- Education 2 -->
                           <div class="timeline-item">
-                            <h4 class="item-title">Bachelor of Engineering</h4>
+                            <h4 class="item-title">Computer Science (Yao Class) - Bachelor of Engineering</h4>
                             <span class="item-period">2016-2020</span>
                             <span class="item-small">Tsinghua University, Beijing, China</span>
-                            <p class="item-description"><b>Computer Science Major(Yao Class)</b>, 3.65/4.00 (163 credits)</p>
+                            <p class="item-description">Overall GPA: 3.7/4.0 (163 credits)</p>
+                            <p class="item-description">Junior & Senior GPA: 3.9/4.0 (37 credits)</p>
                             <p><b>Core Courses:</b> Algorithm Design, Artificial Intelligence, Artificial Intelligence, Numeric Analysis, Data Structure, Game Theory, Network Science, Quantitative Economics, Principal and Application of Database, Advanced Computer Graphics, Topics in Computational Biology, Random Network Optimization, Advanced Network Security</p>
                             <hr />
-                            <p><b>Statistics Minor</b>, 3.55/4.00 (19 credits)</p>
+                            <p><b>Statistics - Minor</b>, 3.6/4.0 (19 credits)</p>
                             <p class="item-description">I am a Bayesian :-)</p>
                             <p><b>Core Courses:</b> Statistical Inference, Multivariate Statistical Analysis, Introduction to Data Science, Bayesian Theory, Nonparametric Statistics</p>
                             <hr />
-                            <p>全球胜任力青年计划 Global Competence Fellowship</p>
-                            <p>商业智能设计项目 Business Intelligence Design (Certificate Program), completed</p>
-                            <p>法治思维与能力提升项目 Law Program (Smaller than Minor), 4.00/4.00 (2 credits), in progress</p>
+                            <p><b>Business Intelligence Design(BID) - Certificate</b></p>
+                            <hr />
+                            <p><b>Global Competence Fellowship</b> 全球胜任力青年计划</p>
+                            <!--<p>法治思维与能力提升项目 Law Program (Certificate), 4.0/4.0 (2 credits), in progress</p>-->
                           </div>
                           <!-- / Education 2 -->
 
