--- a/index.html
+++ b/index.html
@@ -180,9 +180,9 @@
                         <div class="timeline">
                           <!-- Education 1 -->
                           <div class="timeline-item">
-                            <h4 class="item-title">Electrical Engineering and Computer Science - Non-Degree Special Student Program</h4>
+                            <h4 class="item-title"><u>Electrical Engineering and Computer Science</u> - Non-Degree Special Student Program</h4>
                             <span class="item-period">2019</span>
-                            <span class="item-small">Massachusetts Institute of Technology, MA, USA</span>
+                            <span class="item-small">Massachusetts Institute of Technology (MIT), MA, USA</span>
                             <p class="item-description">Overall GPA: 5.0/5.0 (48 units)</p>
                             <p><b>Courses:</b> 6.437 Inference and Information, 6.802 Computational Systems Biology, 6.045 Automata Computability and Complexity Theory, 6.100  Independent Research Project</p>
                           </div>
@@ -190,18 +190,18 @@
 
                           <!-- Education 2 -->
                           <div class="timeline-item">
-                            <h4 class="item-title">Computer Science (Yao Class) - Bachelor of Engineering</h4>
+                            <h4 class="item-title"><u>Computer Science (Yao Class)</u> - Bachelor of Engineering</h4>
                             <span class="item-period">2016-2020</span>
                             <span class="item-small">Tsinghua University, Beijing, China</span>
                             <p class="item-description">Overall GPA: 3.7/4.0 (163 credits)</p>
                             <p class="item-description">Junior & Senior GPA: 3.9/4.0 (37 credits)</p>
                             <p><b>Core Courses:</b> Algorithm Design, Artificial Intelligence, Artificial Intelligence, Numeric Analysis, Data Structure, Game Theory, Network Science, Quantitative Economics, Principal and Application of Database, Advanced Computer Graphics, Topics in Computational Biology, Random Network Optimization, Advanced Network Security</p>
                             <hr />
-                            <p><b>Statistics - Minor</b>, 3.6/4.0 (19 credits)</p>
+                            <p><b><u>Statistics</u> - Minor</b>, 3.6/4.0 (19 credits)</p>
                             <p class="item-description">I am a Bayesian :-)</p>
                             <p><b>Core Courses:</b> Statistical Inference, Multivariate Statistical Analysis, Introduction to Data Science, Bayesian Theory, Nonparametric Statistics</p>
                             <hr />
-                            <p><b>Business Intelligence Design(BID) - Certificate</b></p>
+                            <p><b><u>Business Intelligence Design (BID)</u> - Certificate</b></p>
                             <hr />
                             <p><b>Global Competence Fellowship</b> 全球胜任力青年计划</p>
                             <!--<p>法治思维与能力提升项目 Law Program (Certificate), 4.0/4.0 (2 credits), in progress</p>-->
@@ -211,10 +211,10 @@
 
                             <!-- Education 4 -->
                             <div class="timeline-item">
-                                <h4 class="item-title">Science (High School)</h4>
+                              <h4 class="item-title"><u>Science</u> - High School</h4>
                                 <span class="item-period">2013-2016</span>
                                 <span class="item-small">Beijing No.4 High School, Beijing, China</span>
-                                <p class="item-description">Member of Math competition group and debate team</p>
+                                <p class="item-description">Math Competition Group and Debate Team</p>
                                 <p><a href="https://www.bv2008.cn/app/user/view.php?id=uxaf1YH8inkFb"> 80 hours of recorded volunteer experience</a></p>
                             </div>
                             <!-- / Education 4 -->
