--- a/egypt.html
+++ b/egypt.html
@@ -122,8 +122,7 @@
                 <div class="tags-block">
                     <ul class="tags">
                         <li><a>Field Trip</a></li>
-                        <li><a>Egypt</a></li>
-                        <li><a>Africa</a></li>
+                        <li><a>Middle East</a></li>
                     </ul>
                 </div>
                 <!-- /Technology -->
