--- a/index.html
+++ b/index.html
@@ -137,15 +137,19 @@
                         </div>
                         <p>HELLO WORLD!! I am thrilled that you are here, visiting my website. I am currently studying Computer Science and Statistics(minor) at Tsinghua University from 2016 to 2020. I was awarded the Global Competence Fellowship for my senior year.</p>
                         <p>During my first three years of my undergraduate life, I am lucky to have three research experiences in Central America(UIUC), the East Coast(MIT), and the West Coast(Stanford), where I worked on Text Mining, Privacy-Preserving Machine Learning, and Biomedical Informatics. Broadening the horizon of human intelligence and technology development is an honorable mission in my mind. I hope I can explore a challenging new field in the following years.</p>
-                        <p>I got several chances to have a look at a wide range of developing countries. I went to Sri Lanka as a sea turtle protection volunteer and studied two weeks at AUC in Egypt about Egyptology, Cairo Urban Development, Middle East Conflicts, etc. Besides, I have also been to Nepal, Singapore, and Turkey. The most unbelievable experience is participating in the BRICS Youth Forum, a highest-level official youth diplomacy event, as a delegate.</p>
+                        <p>I got several chances to have a look at a wide range of developing countries. I went to Sri Lanka as a sea turtle protection volunteer. I also studied two weeks at AUC in Egypt and participated in a Deep Dive Program in UAEU in United Arab Emirates. Besides, I have also been to Nepal, Singapore, and Turkey.</p>
+                        <p>The most unbelievable experience is participating in the BRICS Youth Forum, a highest-level official youth diplomacy event, as a delegate.</p>
                       </div>
                     </div>
 
                     <div class="col-sm-6 col-md-6 col-lg-6">
                       <ul class="info-list">
                         <li><span class="title">EMAIL</span><span class="value"><a href="mailto:wangshiy16@mails.tsinghua.edu.cn">wangshiy16@mails.tsinghua.edu.cn</a></span></li>
-                        <li><span class="title"></span><span class="value"><a href="mailto:shiyinw@stanford.edu">shiyinw@stanford.edu</a></span></li>
+
                         <li><span class="title"></span><span class="value"><a href="mailto:shiyinw@mit.edu">shiyinw@mit.edu</a></span></li>
+                        <li><span class="title"></span><span class="value"><a href="mailto:v20190150@uaeu.ac.ae">v20190150@uaeu.ac.ae</a></span></li>
+
+                        <li><span class="title"></span><span class="value"><s>shiyinw@stanford.edu</s></span></li>
                         <li><span class="title"></span><span class="value"><s>shiyinw@illinois.edu</s></span></li>
                         <li><span class="title">LANGUAGE</span><span class="value">English, Chinese, Español(Beginner)</span></li>
                         <li><span class="title">HOBBY</span><span class="value">Watercolor, Musical, Traveling, Equestrian</span></li>
@@ -178,6 +182,17 @@
                         </div>
 
                         <div class="timeline">
+
+                          <!-- Education 1 -->
+                          <div class="timeline-item">
+                            <h4 class="item-title"><u>Electrical Engineering and Computer Science</u> - Non-Degree Special Student Program</h4>
+                            <span class="item-period">2019</span>
+                            <span class="item-small">Massachusetts Institute of Technology (MIT), MA, USA</span>
+                            <p class="item-description">Overall GPA: 5.0/5.0 (48 units)</p>
+                            <p><b>Courses:</b> 6.437 Inference and Information, 6.802 Computational Systems Biology, 6.045 Automata Computability and Complexity Theory, 6.100  Independent Research Project</p>
+                          </div>
+                          <!-- / Education 1 -->
+
                           <!-- Education 1 -->
                           <div class="timeline-item">
                             <h4 class="item-title"><u>Electrical Engineering and Computer Science</u> - Non-Degree Special Student Program</h4>
@@ -550,6 +565,28 @@
                         </a>
                       </figure>
 
+                      <figure class="item" data-groups='["all", "field"]'>
+                        <a class="ajax-page-load" href="uae.html">
+                          <img src="field/uae/cover.jpeg" alt="">
+                          <div>
+                            <h5 class="name">UAE: My Unpredictable Journey</h5>
+                            <small>Asian University Alliance Deep Dive Program 2020 and Beyond</small>
+                            <i class="fa fa-file-text-o"></i>
+                          </div>
+                        </a>
+                      </figure>
+
+                      <figure class="item" data-groups='["all", "field"]'>
+                        <a class="ajax-page-load" href="turtle.html">
+                          <img src="field/turtle/cover.jpeg" alt="">
+                          <div>
+                            <h5 class="name">Sri Lanka: Sea Turtle Protection</h5>
+                            <small>2017 Summer Volunteer Experience</small>
+                            <i class="fa fa-file-text-o"></i>
+                          </div>
+                        </a>
+                      </figure>
+
                       <figure class="item" data-groups='["all", "others"]'>
                         <a class="ajax-page-load" href="president.html">
                           <img src="others/president/cover.jpg" alt="">
@@ -573,16 +610,7 @@
                         </a>
                       </figure>
 
-                      <figure class="item" data-groups='["all", "field"]'>
-                        <a class="ajax-page-load" href="turtle.html">
-                          <img src="field/turtle/cover.jpeg" alt="">
-                          <div>
-                            <h5 class="name">Sri Lanka: Sea Turtle Protection</h5>
-                            <small>2017 Summer Volunteer Experience</small>
-                            <i class="fa fa-file-text-o"></i>
-                          </div>
-                        </a>
-                      </figure>
+
 
                       <figure class="item" data-groups='["all", "others"]'>
                         <a class="ajax-page-load" href="paintings.html">
