--- a/turtle.html
+++ b/turtle.html
@@ -91,7 +91,7 @@
                     <li><p><i class="fa fa-calendar"></i>Aug 2017</p></li>
                 </ul>
 
-                <p class="text-justify">Near the coast of Sri Lanka, many local people hunt sea turtle eggs for food. Consequently, local NGOs established a sea turtle protection center to provide a safe incubation environment for little turtles. I volunteered at a sea turtle protection center in Galle, Sri Lanka. I also traveled around the island to capture the colony history of Sri Lanka.</p>
+                <p class="text-justify">Near the coast of Sri Lanka, many local people hunt sea turtle eggs for food. Consequently, local NGOs established sea turtle protection centers to provide a safe incubation environment for little turtles. I volunteered at one of them in Galle, Sri Lanka. I also traveled around the island to learn the colony history of Sri Lanka.</p>
                 <!-- /Project Description -->
 
                 <!-- Technology -->
